[gd_scene load_steps=2 format=3 uid="uid://qu8m4to34n3s"]

[ext_resource type="Script" path="res://scripts/markdown_label.gd" id="6"]

[node name="rich_text_label" type="RichTextLabel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
bbcode_enabled = true
selection_enabled = true
script = ExtResource("6")

[node name="meta_hover_timer" type="Timer" parent="."]
wait_time = 0.333
one_shot = true

[node name="meta_hover_panel" type="Panel" parent="."]
visible = false
layout_mode = 0

[node name="meta_hover_text" type="Label" parent="meta_hover_panel"]
layout_mode = 0
size_flags_vertical = 1

[connection signal="meta_hover_ended" from="." to="." method="_on_rich_text_label_meta_hover_ended"]
[connection signal="meta_hover_started" from="." to="." method="_on_rich_text_label_meta_hover_started"]
[connection signal="timeout" from="meta_hover_timer" to="." method="_on_meta_hover_timer_timeout"]
